# agency-lead-generator

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  pyproject.toml
.actor/: INPUT_SCHEMA.json  actor.json
.github/workflows/: ci.yml
src/: main.py  scraper.py  web.py
tests/: test_scraper.py  test_web.py
